# grlx

./: CMakeLists.txt  README.md  grlx.qbs
cmake/: GrlxDependencies.cmake
cmake/dependencies/: boost.cmake  cereal.cmake  json.cmake  openssl.cmake  skyr_url.patch  url.cmake
cmake/modules/: use_compiler_macros.cmake
cpp/: servicecontainer.cpp
cpp/rpc/transport/zmq/: dealerendpoint.cpp  poller.cpp  pubendpoint.cpp  routerendpoint.cpp  subendpoint.cpp  zmqsocket.cpp
cpp/service/: servicecontainer.cpp
grlx/async/: threadpool.h
grlx/asyncmanager/: asyncmanager.h
grlx/fsm/: dispatchtable.h  fsm.h  fsmtypes.h  statemachine.h  transition.h  utilities.h
grlx/net/: endpoint.hpp  http.hpp  url.hpp
grlx/net/alias/: error_code.hpp  http.hpp
grlx/net/http/: authorization.hpp  content_type.hpp  field_arg.hpp  headers.hpp  message.hpp  parameters.hpp  request.hpp  response.hpp
grlx/rpc/: json_encoder.h  qt_type_encoder.h  std_type_encoder.h  types.h
grlx/rpc/json/: stdtypes_encoder.h
grlx/service/: servicecontainer.h
grlx/tmpl/: bitmask.h  cache.h  callfunc.h  foreach.h  if.h  int.h  iter.h  sequenceops.h  tags.h  typelist.h  unfold.hpp
grlx/utility/: base64.h  base64_convert.h  convert_policy.h  cron.h  dotenv.hpp  hex_convert.h
include/cereal/archives/: json.hpp
include/grlx/async/: asyncmanager.h  blockingqueue.h  dispatchqueue.h  invoke.h  resetevent.h  scheduler.h  threadpool.h
include/grlx/asyncmanager/: asyncmanager.h
include/grlx/details/: config.h
include/grlx/fsm/: asyncstatemachine.h  dispatchtable.h  fsm.h  fsmtypes.h  statemachine.h  transition.h  utilities.h
include/grlx/net/: url.hpp
include/grlx/net/alias/: asio.hpp  beast.hpp  ssl.hpp  tcp.hpp
include/grlx/net/http/: field.hpp  field_arg.hpp  response.hpp  version.hpp
include/grlx/rpc/: client.h  configurator.h  connection.h  endpoint.h  exceptions.h  generic_stream.h  invoker.h  message.h  msg_handler.h  namespaces.h  requestor.h  server.h  servicedispatcher.h  servicehost.h  serviceprovider.h  types.h  utility.h
include/grlx/rpc/encoder/: binary.h  generic_encoder.h  json.h  qt_types.h
include/grlx/rpc/json/: encoder.h  qttypes_encoder.h  stdtypes_encoder.h
include/grlx/rpc/transport/: asio.h  qtwebsocket.h  zeromq.h
include/grlx/rpc/transport/zmq/: dealerendpoint.h  poller.h  pubendpoint.h  routerendpoint.h  subendpoint.h  zmqsocket.h
include/grlx/service/: rtti.h  servicecontainer.h
include/grlx/tmpl/: cache.h  callfunc.h  foreach.h  if.h  int.h  iter.h  overloaded.hpp  property.h  sequenceops.h  signal.h  tags.h  typeid.h  typelist.h  unfold.hpp
include/grlx/utility/: base64.h  convert.h  convert_policy.h  cron.h  dec_convert.h  format.h  literal.h
include/petra/: callback_table.hpp  chd.hpp  string_literal.hpp
include/petra/detail/: chd.hpp  string_literal.hpp
lib/net/http/: authorization.cpp  content_type.cpp  field_arg.cpp
lib/service/: servicecontainer.cpp
lib/utility/: dotenv.cpp
test/: 10_servicecontainer.cpp  20_rpc.cpp  CMakeLists.txt  io_fixture.hpp
